bpo-44446: set lineno in generator instructions

When generator instructions were added to bytecode, lineno was always set to -1,
instead of the line number. This patch sets the lineno, if there is one.

Signed-off-by: Filipe Laíns <lains@riseup.net>